--- a/content/islamimic/post.mdx
+++ b/content/islamimic/post.mdx
@@ -1,1 +1,179 @@
-kupatikana kwa mwenyenzi mungu na kudra zake
+---
+title: Kupatikana kwa mwenyenzi mungu na kudra zake
+
+#image: images/ethereum.jpg # place in images folder, in same directory
+
+imageAttribution: https://www.vecteezy.com/free-vector/light # if attribution needed, put link to source
+
+date: 2024-07-30 # Date written, OR date edited
+
+category: Islamic
+
+trending: true #leave trending, topPick, and popular as false. The maintainers typically decide this :)
+
+topPick: false
+
+popular: false
+---
+
+Tunaingia kwenye mwaka mpya wa Kiislam (Hijriyyah). Je, vipi tuukaribishe mwaka huu wetu mpya? Na nini hukumu ya kusherehekea? Na nini umuhimu wa miezi ya Kiislamu?
+
+ 
+
+Kuhesabika Mwaka Mpya 
+
+ 
+
+Miaka yetu ya Kiislam imeanza kuhesabika baada ya Nabiy (Swalla Allahu 'alayhi wa aalihi wa sallam)  na Maswahaba kuhajiri (Hijrah) kutoka Makkah kwenda Madiynah. 'Umar (Radhwiya Allaahu 'anhu) akatoa ushauri kuwa kwa vile ni mara ya kwanza wanahamia katika mji ambao wataanza kutekeleza shariy’ah ya Kiislam, basi ni bora kuanza kuhesabu ya miaka kwa kuanzia mwezi huo waliohajiri, ambao ulikuwa ni mwezi wa Al-Muharram.
+
+ 
+
+Na pia inasemekana kuwa 'Umar (Radhwiya Allaahu 'anhu) alikuwa akipata barua kutoka kwa magavana wa nchi mbalimbali zilizokuwa chini ya Uislamu, na zilikuwa zikiandikwa majina ya miezi bila tarehe. Akawashauri Maswahaba wenzake kuwa kuweko na tarehe. Wako waliopendekeza tarehe zianze kwa kufuata miaka ya Kirumi, na wako waliopendekeza zianze kwa miaka ya kifursi. Mwishowe wakakubaliana ianze pale alipohamia Nabiy (Swalla Allaahu 'alayhi wa aalihi wa sallam) Madiynah.
+
+ 
+
+Na mwaka huu wa Kiislam ambao unafupishwa kama H au Hijriyyah, tarehe 1 Al-Muharram H ilikuwa ni sawa na tarehe 16 Julai 622 M. Na ndivyo hivi inavyohesabika mpaka leo.
+
+ 
+
+Nini Maana Ya Hijrah (Kuhama)
+
+ 
+
+Neno 'hijrah' kwa kiarabu mara nyingi linatarjumiwa kuwa ni 'uhamiaji', lakini haina maana tu ni kuhama nchi kwa nchi au mji kwa mji, au maskani kwa maskani, bali ina maana pia 'kuondoka', 'kusogea', 'kuacha', 'kuepukana', 'kujitenga'.  Na Qur-aan inatuthibitishia hayo; mfano mtu kuihajiri Qur-aan ina maana kuihama Qur-aan:
+
+وَقَالَ الرَّسُولُ يَا رَبِّ إِنَّ قَوْمِي اتَّخَذُوا هَـٰذَا الْقُرْآنَ مَهْجُورًا ﴿٣٠﴾
+
+Na Rasuli akasema: “Rabb wangu! Hakika watu wangu wameifanya hii Qur-aan (kuwa ni) yenye kuhamwa. [Al-Furqaan]
+
+ 
+
+Neno la  مَهْجُورًا  ndio lilokusudiwa kuhajiri. 
+
+ 
+
+Pia:
+
+  فَآمَنَ لَهُ لُوطٌ ۘ وَقَالَ إِنِّي مُهَاجِرٌ إِلَىٰ رَبِّي ۖ إِنَّهُ هُوَ الْعَزِيزُ الْحَكِيمُ ﴿٢٦﴾
+
+Basi Luutw akamwamini; na (Ibraahiym) akasema: “Hakika mimi nahajiri kwa ajili ya Rabb wangu; hakika Yeye Ndiye Mwenye enzi ya nguvu Asiyeshindika, Mwenye hikmah wa yote. [Al-‘Ankabuwt: 26]
+
+ 
+
+Hayo ni maneno ya Nabiy Ibraahiym ('Alayhis-Salaam) kutokana na kauli ya Ibn 'Abbaas na Adhw-Dhwahaak. Na kauli nyingine ni maneno ya Nabiy Luutw ('Alayhis-Salaam]. Nabiy Ibraahiym alipoona kwamba watu wake hawataki kumsikiliza na wameshikilia kubakia katika upotofu na kushindwa kwake kuwafanyia da'wah ndipo alipoamua kuhajiri kuelekea Syria. [Tafsiyr Ibn Kathiyr]
+
+ 
+
+Ufafanuzi wa hijra unapatikana pia katika Hadiyth za Nabiy (Swalla Allaahu 'alayhi wa aalihi wa sallam) pale Maswahaba walipomuuliza:
+
+...أيُّ الْهِجْرَةِ أَفْضَلُ، قَالَ: ((أَنْ تَهْجُرَ مَا كَرِهَ رَبُّكَ))
+
+Hijrah gani iliyokuwa bora zaidi? Akasema: ((Ni kuhama yale Anayochukia Rabb wako)) [Swahiyh An-Nasaaiy 4176]
+
+ 
+
+Na:
+
+ عَنْ عَبْدِ اللَّهِ بْنِ عَمْرٍو (رضي الله عنهما) قَال: قَال رَسُولُ الله صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ: ((الْمُسْلِمُ مَنْ سَلِمَ الْمُسْلِمُونَ مِنْ لِسَانِهِ وَيَدِهِ, وَالْمُهَاجِرُ مَنْ هَجَرَ مَا نَهَى اللَّهُ عَنْهُ)) متفق عليه
+
+Imepokelewa kutoka kwa ‘Abdullaah in ‘Amr (Radhwiya Allaahu 'anhu) ambaye amesema: “Rasuli wa Allaah (Swalla Allaahu 'alayhi wa aalihi wa sallam) amesema: ((Muislamu ni yule anayeweka amani kwa watu (ambaye Waislamu wenziwe wanasalimika) kwa ulimi na mkono wake. Na mhamaji (hijrah) ni yule anayehama Aliyoyakataza Allaah)) [Al-Bukhaariy na Muslim]
+
+ 
+
+Kwa hiyo, kuhama ni dalili ya ‘iymaan kwa kujeipusha na batili na kuelekea kwenye haki, hali ambayo itamuweka Muislamu katika uhusiano mzuri zaidi na Rabb wake. Na hivyo tunaweza kusema kuwa Hijrah inaweza kuwa ni:
+
+ 
+
+·     Hijrah kutoka katika kila aina ya shirk na badala yake kuelekea katika Tawhiyd.
+
+ 
+
+·    Hijrah kutoka katika ujinga na badala yake kuelekea katika nuru ya ‘ilmu.
+
+ 
+
+·     Hijrah ni kutoka katika bid’ah na badala yake kuelekea katika Sunnah.
+
+ 
+
+·    Hijrah kutoka katika faragha ya mambo ya upuuzi na badala yake kuutumia wakati kwa ajili ya Allaah (Subhaanahu wa Ta'aalaa)  
+
+ 
+
+·    Hijrah kutoka katika madhambi, upotofu na badala yake kuelekea katika twaa’ah (utiifu) ya Allaah (Subhaanahu wa Ta'aalaa).
+
+ 
+
+·   Hijrah katika kujeipusha na kila kitendo kitakachosababisha kumuingiza mtu motoni na badala yake kufanya ‘amali zinazopelekea kupata Jannah.  
+
+ 
+
+Hijrah inamjenga Muislam kuwa ni 'Mujaahid' (mwenye kufanya jihaad) kwa ‘iymaan yake, na ndio maana tunaona katika Qur-aan Aayah nyingi zinataja ‘iymaan, hijrah na jihaad pamoja.
+
+ 
+
+ إِنَّ الَّذِينَ آمَنُوا وَالَّذِينَ هَاجَرُوا وَجَاهَدُوا فِي سَبِيلِ اللَّـهِ أُولَـٰئِكَ يَرْجُونَ رَحْمَتَ اللَّـهِ ۚ وَاللَّـهُ غَفُورٌ رَّحِيمٌ ﴿٢١٨﴾
+
+Hakika wale walioamini na wale waliohajiri na wakapigana jihaad katika njia ya Allaah, hao wanataraji rahmah ya Allaah, na Allaah ni Mwingi wa kughufuria, Mwenye kurehemu. [Al-Baqarah: 218]
+
+ 
+
+وَالَّذِينَ آمَنُوا وَهَاجَرُوا وَجَاهَدُوا فِي سَبِيلِ اللَّـهِ وَالَّذِينَ آوَوا وَّنَصَرُوا أُولَـٰئِكَ هُمُ الْمُؤْمِنُونَ حَقًّا ۚ لَّهُم مَّغْفِرَةٌ وَرِزْقٌ كَرِيمٌ﴿٧٤﴾
+
+Na wale walioamini na wakahajiri na wakafanya jihaad katika njia ya Allaah, na wale waliotoa makazi na wakanusuru, hao ndio Waumini wa kweli. Watapata maghfirah na riziki karimu. [Al-Anfaal: 74]
+
+ 
+
+الَّذِينَ آمَنُوا وَهَاجَرُوا وَجَاهَدُوا فِي سَبِيلِ اللَّـهِ بِأَمْوَالِهِمْ وَأَنفُسِهِمْ أَعْظَمُ دَرَجَةً عِندَ اللَّـهِ ۚ وَأُولَـٰئِكَ هُمُ الْفَائِزُونَ﴿٢٠﴾
+
+Wale walioamini na wakahajiri na wakafanya jihaad katika njia ya Allaah kwa mali zao na nafsi zao; wana daraja kuu kwa Allaah. Na hao ndio waliofuzu.
+
+ 
+
+يُبَشِّرُهُمْ رَبُّهُم بِرَحْمَةٍ مِّنْهُ وَرِضْوَانٍ وَجَنَّاتٍ لَّهُمْ فِيهَا نَعِيمٌ مُّقِيمٌ﴿٢١﴾
+
+Rabb wao Anawabashiria kwa rahmah kutoka Kwake na radhi (Zake) na Jannaat, watapata humo neema (za kila aina) zenye kudumu.
+
+ 
+
+خَالِدِينَ فِيهَا أَبَدًا ۚ إِنَّ اللَّـهَ عِندَهُ أَجْرٌ عَظِيمٌ﴿٢٢﴾
+
+Ni wenye kudumu humo abadi. Hakika Allaah Kwake kuna ujira adhimu. [At-Tawbah: 20-22]
+
+ 
+
+Ndugu Waislam, tumekosa fursa ya kufanya Hijrah pamoja na Nabiy (Swalla Allaahu 'alayhi wa aalihi wa sallam) na Maswahaba zake, lakini kuna aina nyingine ya hijrah ambayo itatupatia thawabu maradufu. Nayo ni kuhajiri kutoka katika yote yaliyoharamishwa na kuelekea katika yatakayomridhisha Allaah (Subhaanahu wa Ta'aalaa). Maswahaba walimuuliza Nabiy (Swalla Allaahu 'alayhi wa aalihi wa sallam):
+
+Kubakia katika twaa’ah (utii) katika zama za fitnah kama zama zetu hivi sasa, thawabu zake ni sawa na kuhajiri na Nabiy (Swalla Allaahu 'alayhi wa aalihi wa sallam) kwa dalili:
+
+ 
+
+ عنْ مَعقِلِ بن يسارٍ ، رضي اللَّه عنْهُ ، قَالَ : قال رَسُولُ اللَّهِ صَلّى اللهُ عَلَيْهِ وسَلَّم: ((العِبَادَةُ في الهَرْجِ كهِجْرةٍ إلَيَّ )) رواهُ مُسْلمٌ
+
+Kutoka kwa Ma'qil bin Yasaar (Radhwiya Allaahu 'anhu)  ambaye amesema: Nabiy (Swalla Allaahu 'alayhi wa aalihi wa sallam) amesema: ((‘Ibaadah katika fitnah ni kama Hijrah kuelekea kwangu)) [Muslim]
+
+ 
+
+Ndugu Muislam! Jiepushe na yote Aliyoyakataza Allaah (Subhaanahu wa Ta'aalaa) na Rasuli Wake (Swalla Allaahu 'alayhi wa aalihi wa sallam). Pia zidisha ‘ibaadah kwa wingi khasa katika miezi hii mitukufu.
+
+ 
+
+Haifai Kusherehekea Mwaka Mpya
+
+Haifai Waislam kusherehekea mwaka mpya wa Kiislam na kupongezana kwa sababu hizo ni mila za kikafiri. Waisalamu wameiga mila zao mfano makafiri wanavyosherehekea Krismasi inayodaiwa kuwa ni tarehe aliyozaliwa Nabiy ‘Iysaa ('Alayhis-Salaam) basi na Waislam wakazua kusherehekea mazazi ya Nabiy (Swalla Allaahu 'alayhi wa aalihi wa sallam).  Kisha wakazua kusherehekea siku za kuzaliwa (birthdays)! Na makafiri waliposherehekea mwaka mpya wa Gregorian, Waislamu wakaanza kusherehekea mwaka mpya wa hijri.
+
+ 
+
+Kusherehekea huko, ni vile baadhi ya Waislamu kutumiana maamkizi katika njia mbali mbali mitandao ya kijamii kwa kuamkiana mfano: 'Hongera za mwaka mpya' (Happy new year) au ‘Kullu ‘Aam wa ‘antum bikhayr’.
+
+ 
+
+ 
+
+Imaam Muhammad bin Swaalih Al-‘Uthaymiyn alipoulizwa je, nini hukumu ya kupeana pongezi kwa mwaka mpya wa Kiislam au kuamkiana na kuombeana du'aa?
+
+ 
+
+Akajibu:
+
+"Ikiwa mtu atakupa pongezi au kukuamkia, basi muitikie lakini usianzishe wewe kufanya hivyo. Na rai iliyo bora kabisa katika mas-alah haya ni kwamba mtu atakapokuambia: 'Pongezi ya mwaka mpya' basi sema: 'Tunamuomba Allaah aufanye uwe mwaka wa kheri na baraka kwako'. Lakini usianzishe abadan wewe kwa sababu sikuona mapokezi yoyote kwamba Salafus-Swaalih (watangu wema) walikuwa wakiamkiana au kupeana hongera katika mwaka mpya wa Hijrah."      
